--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,11 +1,11 @@
 :root {
-  --blue-light: #a9d6e5;
-  --blue-darkest: #01173d;
-  --grey-light: #555555;
-  --white: #eee2df;
-  --orange: #ff6d00;
-  --purple: #7a0485;
-  --red: #eb0000;
+  --background: #a9d6e5;
+  --task: #01173d;
+  --placeholder: #555555;
+  --text: #eee2df;
+  --text-button: #ff6d00;
+  --header-gradient: #7a0485;
+  --delete: #eb0000;
 }
 
 * {
@@ -19,7 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: var(--blue-light);
+  background-color: var(--background);
 }
 
 header {
@@ -27,6 +27,7 @@ header {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+  position: relative;
 }
 
 header h1 {
@@ -36,8 +37,8 @@ header h1 {
   text-transform: uppercase;
   background-image: linear-gradient(
     to right,
-    var(--orange) 0%,
-    var(--purple) 30%
+    var(--text-button) 0%,
+    var(--header-gradient) 30%
   );
   background-clip: initial;
   -webkit-background-clip: text;
@@ -45,12 +46,29 @@ header h1 {
 }
 
 header h1::after {
+  display: inline-block;
   content: "";
   width: 30px;
   height: 30px;
-  display: inline-block;
   margin-left: 10px;
   background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 448 512"><path fill="purple" d="M 48 48 a 48 48 0 1 0 48 48 a 48 48 0 0 0 -48 -48 Z m 0 160 a 48 48 0 1 0 48 48 a 48 48 0 0 0 -48 -48 Z m 0 160 a 48 48 0 1 0 48 48 a 48 48 0 0 0 -48 -48 Z m 448 16 H 176 a 16 16 0 0 0 -16 16 v 32 a 16 16 0 0 0 16 16 h 320 a 16 16 0 0 0 16 -16 v -32 a 16 16 0 0 0 -16 -16 Z m 0 -320 H 176 a 16 16 0 0 0 -16 16 v 32 a 16 16 0 0 0 16 16 h 320 a 16 16 0 0 0 16 -16 V 80 a 16 16 0 0 0 -16 -16 Z m 0 160 H 176 a 16 16 0 0 0 -16 16 v 32 a 16 16 0 0 0 16 16 h 320 a 16 16 0 0 0 16 -16 v -32 a 16 16 0 0 0 -16 -16 Z" ></path></svg>');
+}
+
+#change-theme {
+  width: 40px;
+  position: absolute;
+  background: var(--background);
+  right: 50px;
+  top: 40px;
+  cursor: pointer;
+}
+
+#change-theme:hover {
+  opacity: 0.8;
+}
+
+#change-theme:active {
+  opacity: 0.6;
 }
 
 #new-task-form {
@@ -75,29 +93,30 @@ button:active {
 
 #new-task-form__input {
   flex: 1 1 0%;
-  background-color: var(--blue-darkest);
+  background-color: var(--task);
   padding: 1rem;
   border-radius: 0.8rem;
   padding-left: 4rem;
   margin-right: 1rem;
-  color: var(--white);
+  color: var(--text);
   font-size: 1.25rem;
   box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.6);
+  transition: all 0.3s ease-in-out;
 }
 
 #new-task-form__input::placeholder {
-  color: var(--grey-light);
+  color: var(--placeholder);
 }
 
 #new-task-form__submit {
-  color: var(--orange);
+  color: var(--text-button);
   font-size: 1.25rem;
   font-weight: 700;
   cursor: pointer;
   transition: 0.4s;
   border: 1px solid #111827;
   border-radius: 0.8rem;
-  background-color: var(--blue-darkest);
+  background-color: var(--task);
   box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.6);
 }
 
@@ -123,7 +142,7 @@ main {
 .task-list h2 {
   font-size: 1.5rem;
   font-weight: 600;
-  color: var(--grey-light);
+  color: var(--placeholder);
   margin-bottom: 1rem;
   display: inline-block;
 }
@@ -141,7 +160,7 @@ main {
 
 #trash__text {
   float: right;
-  color: var(--blue-darkest);
+  color: var(--task);
   font-weight: 700;
   transition: all 0.3s ease-in-out;
   transform: translateX(-20px);
@@ -170,7 +189,7 @@ main {
 .task {
   display: flex;
   justify-content: space-between;
-  background-color: var(--blue-darkest);
+  background-color: var(--task);
   padding: 1rem;
   border-radius: 0.8rem;
   margin-bottom: 1rem;
@@ -184,12 +203,12 @@ main {
 .task__icon {
   width: 24px;
   height: 24px;
-  color: var(--white);
+  color: var(--text);
 }
 
 .task__text {
   margin-left: 20px;
-  color: var(--white);
+  color: var(--text);
   font-size: 1.125rem;
   width: 100%;
   display: block;
@@ -197,7 +216,7 @@ main {
 }
 
 .task__text:not(:read-only) {
-  color: var(--orange);
+  color: var(--text-button);
 }
 
 .task__actions {
@@ -215,11 +234,11 @@ main {
 }
 
 .task__actions--edit {
-  color: var(--orange);
+  color: var(--text-button);
 }
 
 .task__actions--delete {
-  color: var(--red);
+  color: var(--delete);
 }
 
 #iconChange {
@@ -227,5 +246,5 @@ main {
   margin-top: 17px;
   margin-left: 20px;
   cursor: pointer;
-  color: var(--white);
+  color: var(--text);
 }
