--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --background: #a9d6e5;
   --task: #01173d;
   --placeholder: #555555;
@@ -6,7 +6,7 @@
   --text-button: #ff6d00;
   --header-gradient: #7a0485;
   --delete: #eb0000;
-}
+} */
 
 * {
   margin: 0;
@@ -56,11 +56,13 @@ header h1::after {
 
 #change-theme {
   width: 40px;
+  height: 40px;
   position: absolute;
   background: var(--background);
   right: 50px;
   top: 40px;
   cursor: pointer;
+  overflow: hidden;
 }
 
 #change-theme:hover {
